(end) swagger test end -> 동작법만 숙지용
